[package]
name = "vnts"
version = "1.2.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packet = { path = "./packet" }
clap = { version = "=4.0.32", features = ["derive"] }
log = "0.4"
log4rs = "1.3"
dirs = "5"
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.0.1"

rsa = { version = "0.9.6", features = [] }
spki = { version = "0.7.3", features = ["fingerprint", "alloc", "base64"] }
aes-gcm = { version = "0.10.2", optional = true }
ring = { version = "0.17", optional = true }
rand = "0.8"
sha2 = { version = "0.10", features = ["oid"] }
colored = "2.1"
anyhow = "1.0.82"

thiserror = "1"
chrono = "0.4"
lazy_static = "1.4.0"
moka = { version = "0.12", default-features = false, features = ["sync"] }
protobuf = "3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
socket2 = { version = "0.5", features = ["all"] }

actix-web = { version = "4.5", optional = true }
actix-files = { version = "0.6", optional = true }
actix-web-static-files = { version = "4.0.1", optional = true }
tokio-tungstenite = "0.23.1"

boringtun = { path = "lib/boringtun", features = [] }
ipnetwork = "0.20.0"
base64 = "0.22.1"

serde = { version = "1", features = ["derive"] }
crossbeam-utils = "0.8"
futures-util = "0.3"
uuid = { version = "1.8", features = ["v4"] }
static-files = "0.2"

[features]
default = ["normal"]
normal = ["aes-gcm"]
ring-cipher = ["ring"]
web = ["actix-web", "actix-files", "actix-web-static-files"]

[build-dependencies]
protobuf-codegen = "3"
protoc-bin-vendored = "3"
static-files = "0.2"
rand = "0.8.5"
chrono = "0.4.23"

[profile.release]
opt-level = 'z'
debug = 0
debug-assertions = false
strip = "debuginfo"
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
